<resources>
    <string name="app_name">WearWeather</string>
    <string name="activity_first_text">Wear Weather</string>

    <string name="add_text">Add Text</string>
    <string name="draw_over">Draw</string>
    <string name="add_emoji">Add Emoji</string>
    <string name="rotate_crop">Rotate/Crop</string>
    <string name="transition_image">transition:IMAGE</string>
    <string name="save_changes">Save Changes</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="rotate_left">Rotate Left</string>

    <string name="send">보내기</string>
    <string name="write">게시</string>
    <string name="profile">Profile</string>
    <string name="follower">팔로워</string>
    <string name="follow">팔로우</string>
    <string name="follow_cancel">팔로우 취소</string>
    <string name="count_0">0</string>
    <string name="post">게시물</string>
    <string name="following">팔로잉</string>

    <string name="signin_email">회원가입 및 이메일 로그인</string>
    <string name="signin_google">Google으로 로그인</string>
    <string name="signin_facebook">Facebook으로 로그인</string>
    <string name="signin_twitter">Twitter으로 로그인</string>
    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요</string>


    <string name="title_text">Wear Weather</string>
    <string name="weather">Weather</string>
    <string name="wear_story">Wear Story</string>
    <string name="community">Community</string>
    <string name="first_introduce">웨어웨더와 함께 기분 좋은 하루를 코디하세요!</string>
    <string name="second_introduce">코디에 도움되는 쉬운 날씨 정보 확인하기</string>
    <string name="third_introduce">다른 사람들과 옷차림 고민 해결하기</string>
    <string name="forth_introduce">다른 사람들은 오늘 어떻게 입었는지 스타일로 확인하기</string>
    <string name="button_introduce">웨어웨더 시작하기</string>
    <string name="input_nick_label">웨어웨더에서 사용할 닉네임을 정해주세요!</string>
    <string name="input_nick">닉네임을 입력하세요...</string>
    <string name="nick_possible">이 닉네임으로 웨어웨더와 함께 할 수 있어요:)</string>
    <string name="nick_impossible">다른 분이 이미 사용중인 닉네임입니다:(</string>

    <string name="permission_top">원활한 서비스 사용을 위해 \n접근 권한을 허용해주세요</string>
    <string name="permission_content">웨어웨더에서는 아래와 같은 접근 권한을 필요로 합니다.</string>
    <string name="permission_essential">필수적 접근 권한</string>
    <string name="permission_optional">선택적 접근 권한</string>

    <string name="permission_location_title">위치</string>
    <string name="permission_location_content">위치 기반 날씨 정보 제공을 위한 권한</string>

    <string name="permission_camera_title">카메라</string>
    <string name="permission_camera_content">포스트 업로드 시, 카메라 촬영을 위한 권한</string>

    <string name="permission_gallery_title">사진 라이블러리</string>
    <string name="permission_gallery_content">포스트 업로드 시, 이미지 파일 첨부를 위한 권한</string>

    <string name="permission_alarm_title">알림</string>
    <string name="permission_alarm_content">날씨 정보 제공 알림을 위한 권한</string>

    <string name="permission_bottom">\'선택적 접근 권한\'은 허용하지 않아도 해당 기능 외 서비스 이용이 가능합니다.</string>
    <string name="permission_button">확인했어요</string>

    <string name="add_brand_tag">브랜드 태그하기</string>
    <string name="add_location">위치 추가</string>


    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>


    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">215913547629-3iaqbkj1o9fr5leao0ijio5pckjad6f6.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
<<<<<<< HEAD
    <string name="addLocation">위치 추가</string>
=======

    <!-- kakao native app key -->
    <string name="WearWearther"></string>
    <string name="kakao_app_key">54f094439a6760b5b14dbf52b6059d84</string>

    <!-- naver-->
    <string name="naver_client_id">PIS_EzQAfG9a9QCEi3OV</string>
    <string name="naver_client_secret">Ka6PBOXrJZ</string>
    <string name="naver_client_name">WearWeather</string>
>>>>>>> origin/jylee
</resources>