<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toTopOf="@+id/permission_check_button"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_top"
                android:textSize="24sp"
                android:textColor="#00060C"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="50dp"/>
            <TextView
                android:id="@+id/textView_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_content"
                android:textSize="12sp"
                android:textColor="#A0A0A5"
                app:layout_constraintTop_toBottomOf="@+id/textView_top"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"/>
            <TextView
                android:id="@+id/textView_essential"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_essential"
                android:textSize="14sp"
                android:textColor="#00060C"
                app:layout_constraintTop_toBottomOf="@+id/textView_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="42dp"/>
            <TextView
                android:id="@+id/textView_location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#00060C"
                android:text="@string/permission_location_title"
                app:layout_constraintTop_toBottomOf="@+id/textView_essential"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="24dp"/>
            <TextView
                android:id="@+id/textView_location_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_location_content"
                android:textSize="12sp"
                android:textColor="#A0A0A5"
                app:layout_constraintTop_toBottomOf="@+id/textView_location_title"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="1dp"/>
            <TextView
                android:id="@+id/textView_optional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_optional"
                android:textSize="14sp"
                android:textColor="#00060C"
                app:layout_constraintTop_toBottomOf="@+id/textView_location_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="42dp"/>
            <TextView
                android:id="@+id/textView_camera_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_camera_title"
                android:textSize="14sp"
                android:textColor="#00060C"
                app:layout_constraintTop_toBottomOf="@+id/textView_optional"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="24dp"/>
            <TextView
                android:id="@+id/textView_camera_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_camera_content"
                android:textSize="12sp"
                android:textColor="#A0A0A5"
                app:layout_constraintTop_toBottomOf="@+id/textView_camera_title"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="1dp"/>
            <TextView
                android:id="@+id/textView_gallery_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_gallery_title"
                android:textSize="14sp"
                android:textColor="#00060C"
                app:layout_constraintTop_toBottomOf="@+id/textView_camera_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="18dp"/>
            <TextView
                android:id="@+id/textView_gallery_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_gallery_content"
                android:textSize="12sp"
                android:textColor="#A0A0A5"
                app:layout_constraintTop_toBottomOf="@+id/textView_gallery_title"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="1dp"/>
            <TextView
                android:id="@+id/textView_alarm_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_alarm_title"
                android:textSize="14sp"
                android:textColor="#00060C"
                app:layout_constraintTop_toBottomOf="@+id/textView_gallery_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="18dp"/>
            <TextView
                android:id="@+id/textView_alarm_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_alarm_content"
                android:textSize="12sp"
                android:textColor="#A0A0A5"
                app:layout_constraintTop_toBottomOf="@+id/textView_alarm_title"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="1dp"/>
            <TextView
                android:id="@+id/textView_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_bottom"
                android:textSize="12sp"
                android:textColor="#A0A0A5"
                app:layout_constraintTop_toBottomOf="@+id/textView_alarm_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="45dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/permission_check_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/permission_button"
        android:fontFamily="@font/notosans_medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"

        android:background="#AAD2FF" />

</androidx.constraintlayout.widget.ConstraintLayout>